Ccg el #1205719 keichwa (#2006)
* Added Uyuni Client Tools channels for Enterprise Linux / SUSE Liberty
  Linux in Client Configuration Guide (bsc#1205719)
https://github.com/SUSE/spacewalk/issues/20187
* fix typo in shell command (drive-by edit)
* change uyuni and add suma table
* Update modules/client-configuration/pages/clients-sleses.adoc
Co-authored-by: Julio González Gil <juliogonzalez@users.noreply.github.com>

--- a/modules/client-configuration/pages/clients-sleses.adoc
+++ b/modules/client-configuration/pages/clients-sleses.adoc
@@ -104,9 +104,9 @@ include::snippets/addchannels_vendor_webui.adoc[]
 
 endif::[]
 
-
-ifeval::[{uyuni-content} == true]
 The channels you need for this procedure are:
+
+ifeval::[{suma-content} == true]
 
 [[es-channels-cli]]
 [cols="1,1,1,1", options="header"]
@@ -135,6 +135,34 @@ The channels you need for this procedure are:
 
 |===
 
+ifeval::[{uyuni-content} == true]
+
+[[es-channels-cli]]
+[cols="1,1,1,1", options="header"]
+.ES Channels - CLI
+|===
+
+| OS Version
+| Base Channel
+| Client Channel
+| Tools Channel
+
+| {sll} 7
+| rhel-x86_64-server-7
+| -
+| sll7-uyuni-client-x86_64
+
+| {sll} 8
+| rhel8-pool-x86_64
+| -
+| sll8-uyuni-client-x86_64
+
+| {sll} 9
+| el9-pool-x86_64
+| -
+| sll9-uyuni-client-x86_64
+
+|===
 
 include::snippets/addchannels_novendor_cli.adoc[]
 
