Fixing random errors in 4.3 branch.

--- a/modules/specialized-guides/pages/salt/salt-formula-monitoring.adoc
+++ b/modules/specialized-guides/pages/salt/salt-formula-monitoring.adoc
@@ -25,8 +25,7 @@ For more information about using monitoring, see xref:administration:monitoring.
 ====
 [guimenu]``Initial admin password`` is used on the first run only, and Grafana UI prompts to change it.
 This field cannot be used to change the Grafana password.
-For more information on how to change the password, see
-xref:administration:pages/monitoring.adoc[].
+For more information on how to change the password, see xref:administration:monitoring.adoc[].
 ====
 . For each Prometheus data source you want to use, in the menu:Datasources[Prometheus] section, click btn:[+], and set these parameters:
 * In the [guimenu]``Datasource name`` field, type a name to identify the data source.
