Random fixes discovered in 4.3 branch.

--- a/modules/common-workflows/pages/workflow-onboarding.adoc
+++ b/modules/common-workflows/pages/workflow-onboarding.adoc
@@ -97,9 +97,7 @@ This should be the product you just enabled:
 +
 image::activationkey_base.png[scaledwidth=80%]
 . Check the child channels to include, and any add-on system types you want clients registered with this key to have.
-  Click btn:[Create Activation Key]:
-+
-image::child.png[scaledwidth=80%]
+  Click btn:[Create Activation Key].
 
 
 .Procedure: Bootstrap the client
