--- a/modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc
+++ b/modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc
@@ -1,5 +1,5 @@
 [[containerized-proxy-deployment]]
-= Containerized proxy deployment
+= Containerized proxy deployment using internal registry
 
 It is possible to deploy containerized images in an environment without an internet connection.
 In such case, the images are copied from {suse} registry to an internal registry, or saved to a [literal]``tar`` file.
