--- a/modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc
+++ b/modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc
@@ -14,7 +14,7 @@ You should first register Salt minion to {productname} server, and then re-use t
 
 This example illustrates deployment of {salt} proxies only.
 
-.Procedure: Deploying {salt} Proxy from containerized image
+.Procedure: Deploying {salt} Proxy from an internal image registry
 [role=procedure]
 
 . Install [literal]``skopeo`` on a machine with access to [literal]``registry.suse.com``:
