--- a/modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc
+++ b/modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc
@@ -4,9 +4,6 @@
 It is possible to deploy containerized images in an environment without an internet connection.
 In such case, the images are copied from {suse} registry to an internal registry, or saved to a [literal]``tar`` file.
 
-You should first register Salt minion to {productname} server, and then re-use the same FQDN in a generation.
-
-
 
 [[image.from.suse.to.internal.registry]]
 == Image copying from {suse} registry to internal registry 
@@ -41,6 +38,8 @@ done
 ====
 If you want to copy the images to a registry with SSL, remove the property [literal]`--dest-tls-verify=false`.
 ====
++
+. To start using the images from the internal registry, adapt the image path at file [literal]`/etc/sysconfig/uyuni-proxy-systemd-services.config`.
 
 [[air-gapped-solution-for-podman]]
 == Air-gapped solution for Podman
@@ -68,7 +67,7 @@ podman save -m -o proxy-images.tar \
 ----
 +
 . Transfer the [literal]`proxy-images.tar` to the air-gapped proxy.
-. Run this command to start the pod:
+. To make images available to be started when needed, wun teh command:
 +
 ----
 podman load -i proxy-images.tar
