--- a/modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc
+++ b/modules/installation-and-upgrade/pages/containerized-proxy-deployment.adoc
@@ -67,7 +67,7 @@ podman save -m -o proxy-images.tar \
 ----
 +
 . Transfer the [literal]`proxy-images.tar` to the air-gapped proxy.
-. To make images available to be started when needed, wun the command:
+. To make images available to be started when needed, run the command:
 +
 ----
 podman load -i proxy-images.tar
