Document openSUSE Leap Micro, remove openSUSE MicroOS

--- a/modules/administration/pages/actions.adoc
+++ b/modules/administration/pages/actions.adoc
@@ -72,7 +72,7 @@ For transactional update systems, an action chain is executed inside a single sn
 This can cause some limitations.
 
 ifeval::[{uyuni-content} == true]
-For more information, see xref:client-configuration:clients-slemicro.adoc[] and xref:client-configuration:clients-microos.adoc[].
+For more information, see xref:client-configuration:clients-slemicro.adoc[] and xref:client-configuration:clients-opensuseleapmicro.adoc[].
 endif::[]
 
 ifeval::[{suma-content} == true]
@@ -141,7 +141,7 @@ For transactional update systems, consider that a remote command is run inside a
 This can cause some limitations.
 
 ifeval::[{uyuni-content} == true]
-For more information, see xref:client-configuration:clients-slemicro.adoc[] and xref:client-configuration:clients-microos.adoc[].
+For more information, see xref:client-configuration:clients-slemicro.adoc[] and xref:client-configuration:clients-opensuseleapmicro.adoc[].
 endif::[]
 
 ifeval::[{suma-content} == true]
