--- a/modules/client-configuration/pages/supported-features-opensuse-leap-micro.adoc
+++ b/modules/client-configuration/pages/supported-features-opensuse-leap-micro.adoc
@@ -1,11 +1,10 @@
-[[supported-features-sle-micro]]
-= Supported {micro} Client Features
+[[supported-features-opensuse-leap-micro]]
+= {leapmicro} Client Features
 
 
 [IMPORTANT]
 ====
-The operating system you run on a client is supported by the organization that supplies the operating system.
-{micro} is supported by {suse}.
+{leapmicro} is supported by the {suse} community.
 ====
 
 
@@ -19,11 +18,11 @@ The icons in this table indicate:
 
 
 [cols="1,1", options="header"]
-.Supported Features on {micro} Operating Systems
+.Supported Features on {leapmicro} Operating Systems
 |===
 
 | Feature
-| {micro}
+| {leapmicro}
 
 | Client
 | {salt}
