fixes to syntax on tables, and fix for broken table that was eating content

--- a/modules/installation-and-upgrade/pages/db-intro.adoc
+++ b/modules/installation-and-upgrade/pages/db-intro.adoc
@@ -12,7 +12,6 @@ This table shows the PostgreSQL version required for each version of {productnam
 .PostgreSQL Versions
 [cols="1,1,1", options="header"]
 |===
-
 | {productname} version
 | Operating System version
 | PostgreSQL version
@@ -32,18 +31,17 @@ This table shows the PostgreSQL version required for each version of {productnam
 | {productname} 4.3.0
 | SLES 15 SP4
 | PostgreSQL 14
-
 |===
 endif::[]
 
 ifeval::[{uyuni-content} == true]
+
 This table shows the PostgreSQL version required for each version of {productname} and {opensuse}:
 
 [[postgres-version]]
 .PostgreSQL Versions
-[cols="1,1,1", options="header"]
+[cols="3*", options="header"]
 |===
-
 | {productname} version
 | Operating System version
 | PostgreSQL version
@@ -59,11 +57,9 @@ This table shows the PostgreSQL version required for each version of {productnam
 | {productname} >= 2022.06
 | {opensuse} 15.4
 | PostgreSQL 14
-
 |===
 endif::[]
 
-// 2019-10-16, ke: I think we'd better keep the info on 9.4 for the moment
 
 ifeval::[{suma-content} == true]
 [NOTE]
