--- a/modules/installation-and-upgrade/pages/install-proxy-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/install-proxy-uyuni.adoc
@@ -4,7 +4,6 @@
 {productname} Proxy can be installed on {opensuse} Leap {opensuse-version}.
 
 .Procedure: Installing {opensuse} Leap with Uyuni Proxy
-
 . Install {opensuse} Leap and apply all package updates available.
 
 . Configure a resolvable fully qualified domain name (FQDN) with menu:yast[System > Network Settings > Hostname/DNS].
@@ -13,14 +12,12 @@
     As [systemitem]``root`` enter:
 +
 
-// variable assignment to avoid overlong lines
-// https://download.opensuse.org/repositories/systemsmanagement:/Uyuni:/Stable/images/repo/Uyuni-Proxy-POOL-x86_64-Media1/
-+
 ----
 repo=repositories/systemsmanagement:/
 repo=${repo}Uyuni:/Stable/images/repo/Uyuni-Proxy-POOL-x86_64-Media1/
 zypper ar https://download.opensuse.org/$repo uyuni-proxy-stable
 ----
++
 
 . Refresh metadata from the repositories.
     As [systemitem]``root`` enter:
@@ -29,6 +26,7 @@ zypper ar https://download.opensuse.org/$repo uyuni-proxy-stable
 ----
 zypper ref
 ----
++
 
 . Install the pattern for the {productname} Proxy:
     As [systemitem]``root`` enter:
@@ -37,11 +35,13 @@ zypper ref
 ----
 zypper in patterns-uyuni_proxy
 ----
++
 
 . Reboot the {productname} Proxy.
 
-* For more information about the stable version of {productname}, see https://www.uyuni-project.org/pages/stable-version.html.
-* For more information about the development version of {productname}, see https://www.uyuni-project.org/pages/devel-version.html.
+* For more information about the stable version of {productname}, see link:https://www.uyuni-project.org/pages/stable-version.html[].
+
+* For more information about the development version of {productname}, see link:https://www.uyuni-project.org/pages/devel-version.html[].
 
 When the installation is complete, you can continue with {productname} setup.
 For more information, see xref:installation-and-upgrade:uyuni-proxy-registration.adoc[].
