--- a/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
@@ -3,7 +3,6 @@
 
 [NOTE]
 ====
-
 ifeval::[{uyuni-content} == true]
 Only {opensuse} Leap 15.3 and newer are supported to be used as container host for {productname} Proxy containers.
 endif::[]
@@ -19,11 +18,9 @@ Connecting the container host as a traditional client will not work because requ
 [[installation-proxy-containers-requirements]]
 == Container Host Requirements
 
-
-[cols="1,1,1", options="header"]
 .Proxy Container Host Hardware Requirements
+[cols="3*", options="header"]
 |===
-
 | Hardware
 | Details
 | Recommendation
@@ -43,14 +40,11 @@ Connecting the container host as a traditional client will not work because requ
 | Disk Space
 |
 | Minimum 100{nbsp}GB
-
 |===
 
-
-[cols="1,1,1", options="header"]
 .Proxy Container Host Software Requirements
+[cols="3*", options="header"]
 |===
-
 | Software
 | Details
 | Remark
@@ -58,8 +52,7 @@ Connecting the container host as a traditional client will not work because requ
 | Connection method
 | Salt
 | Host must be configured as a Salt client
-
-| ===
+|===
 
 [IMPORTANT]
 ====
