--- a/modules/installation-and-upgrade/pages/server-setup.adoc
+++ b/modules/installation-and-upgrade/pages/server-setup.adoc
@@ -36,25 +36,39 @@ This section guides you through {productname} setup using {yast}.
 [[proc-quickstart-certificate-information-yast]]
 .Procedure: {productname} Setup
 . On the {productname} Server, at the command line, use the [command]``yast2 susemanager_setup`` command to begin setup.
+
 . From the introduction screen select menu:SUSE Manager Setup[Setup SUSE Manager from scratch] and click btn:[Next] to continue.
+
 . Enter an email address to receive status notifications and click btn:[Next] to continue.
     {productname} can sometimes send a large volume of notification emails.
     You can disable email notifications in the {webui} after setup, if you need to.
     For more information on disabling email notifications, see xref:reference:users/user-details.adoc[].
+
 . Enter your certificate information and a password.
     If you intend to use a custom SSL certificate, you need to have set this up first.
     For more information about SSL certificates, see xref:administration:ssl-certs.adoc[].
 +
+
 image::quickstart-mgr-setup4-ncurses.png[scaledwidth=80%]
++
+
 . Click btn:[Next] to continue.
+
 . From the menu:SUSE Manager Setup[Database Settings] screen, enter a database user and password and click btn:[Next] to continue.
 +
+
 image::quickstart-mgr-setup5-ncurses.png[scaledwidth=80%]
++
+
 . Click btn:[Next] to continue.
+
 . Click btn:[Yes] to run setup when prompted, and wait for it to complete.
+
 . Click btn:[Next] to continue.
     Take a note of the address of the {productname} {webui}.
+
 . Click btn:[Finish] to complete {productname} setup.
++
 
 [IMPORTANT]
 ====
@@ -103,9 +117,9 @@ Installing the CA certificate from the [path]``pub`` directory via HTTP and impo
 +
 
 image::quickstart-mgr-setup-admin1.png[scaledwidth=80%]
++
 
 You are now presented with the {productname} menu:Home[Overview] page.
-// In the next section you will prepare the server for connecting the first client.
 
 
 == Synchronizing Products from {scc}
@@ -127,9 +141,13 @@ Enter your organization credentials in the {susemgr} {webui}:
 [[proc-admin-organization-credentials]]
 .Procedure: Entering Organization Credentials
 . In the {susemgr} {webui}, select menu:Admin[Setup Wizard].
+
 . From the [guimenu]``Setup Wizard`` page select the btn:[Organization Credentials] tab.
+
 . Click btn:[Add a new credential].
+
 . In the dialog, enter [guimenu]``Username`` and [guimenu]``Password``, and confirm with btn:[Save].
++
 
 When the credentials are confirmed with a check-mark icon, proceed with <<proc-quickstart-first-channel-sync>>.
 
@@ -150,15 +168,15 @@ image::admin_suse_products.png[scaledwidth=80%]
 
 . Use ``Filter by product description`` and ``Filter by architecture`` to filter the liste of displayed products.
     If your {sle} client is based on [systemitem]``x86_64`` architecture scroll down the page and select the check box for this channel now.
-+
 
 * Add channels to {productname} by selecting the check box to the left of each channel.
     Click the arrow symbol to the left of the description to unfold a product and list available modules.
 * Click btn:[Add Products] to start product synchronization.
++
 
 After adding the channel, {productname} will schedule the channel to be synchronized.
 This can take a long time as {productname} will copy channel software sources from the {suse} repositories located at {scc} to local [path]``/var/spacewalk/`` directory of your server.
-
++
 
 [TIP]
 .PostgreSQL and Transparent Huge Pages
@@ -174,12 +192,15 @@ GRUB_CMDLINE_LINUX_DEFAULT="resume=/dev/sda1 splash=silent quiet showopts elevat
 
 To write the new configuration run [command]``grub2-mkconfig -o /boot/grub2/grub.cfg``.
 ====
++
 
 Monitor the channel synchronization process in real-time by viewing channel log files located in the directory [path]``/var/log/rhn/reposync``:
++
 
 ----
 tail -f /var/log/rhn/reposync/<CHANNEL_NAME>.log
 ----
++
 
 When the channel synchronization process is complete, you can continue with client registration.
 For more instructions, see xref:client-configuration:registration-overview.adoc[].
@@ -198,14 +219,13 @@ You can configure an external database using the [command]``mgr-setup`` command 
 This section guides you through {productname} setup using [command]``mgr-setup``.
 
 .Procedure : Configuring server with external database
-
 . First create a [path]``setup_env.sh`` file in the [path]``/root`` directory defining the server setup.
   The details are explained in the following steps.
-
 
 . Set the variables defining your certificate information and password.
 The information is the same as explained at <<proc-quickstart-certificate-information-yast>>.
 +
+
 ----
 CERT_O="SUSE"
 CERT_OU="SUSE"
@@ -216,11 +236,13 @@ CERT_EMAIL="email@prov.com"
 CERT_PASS="spacewalk"
 USE_EXISTING_CERTS="N"
 ----
++
 
 . Define your database.
 The user and password will be created during the setup.
 If you are using an external database, specify the hostname and port.
 +
+
 ----
 MANAGER_USER="spacewalk"
 MANAGER_PASS="spacewalk"
@@ -231,12 +253,14 @@ MANAGER_DB_PORT="db port"
 MANAGER_DB_PROTOCOL="TCP"
 MANAGER_ENABLE_TFTP="Y"
 ----
++
 
 . Set the variables defining the specific configuration for the external database.
   In this scenario, an RDS database has been deployed and is accessible by the server.
   To establish a connection, an AWS certificate is also required.
   [literal]``EXTERNALDB_ADMIN_USER`` and [literal]``EXTERNALDB_ADMIN_PASS`` are the credentials set during the RDS deployment:
 +
+
 ----
 EXTERNALDB_ADMIN_USER="postgres"
 EXTERNALDB_ADMIN_PASS="spacewalk"
@@ -244,10 +268,12 @@ MANAGER_DB_CA_CERT="/path_to/aws.crt"
 REPORT_DB_CA_CERT="/path_to/aws.crt"
 EXTERNALDB_PROVIDER="aws"
 ----
++
 
 . To connect to the external database, configure the report database with the RDS hostname and port.
 [literal]``REPORT_DB_USER`` and [literal]``REPORT_DB_PASS`` will be created by the script:
 +
+
 ----
 REPORT_DB_HOST="db hostname"
 REPORT_DB_PORT="db port"
@@ -255,17 +281,16 @@ REPORT_DB_NAME="reportdb"
 REPORT_DB_USER="pythia_susemanager"
 REPORT_DB_PASS="pythia_susemanager"
 ----
-
++
 
 [WARNING]
 ====
 Do not use [literal]``MANAGER_USER`` as the user when deploying RDS.
 ====
-
++
 
 [NOTE]
 .Getting AWS certificate
 ====
-The certificate can be found at https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/UsingWithRDS.SSL.html.
-
+The certificate can be found at link:https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/UsingWithRDS.SSL.html[].
 ====
