--- a/modules/installation-and-upgrade/pages/uyuni-install-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/uyuni-install-requirements.adoc
@@ -56,17 +56,15 @@ Double the space if the server is an ISS Master.
 |
 | Swap space
 | 3{nbsp}GB
-
 |===
 
 
 
 == Proxy Requirements
 
-[cols="1,1,1", options="header"]
+[cols="3*", options="header"]
 .Proxy Requirements
 |===
-
 | Software and Hardware
 | Details
 | Recommendation
@@ -98,7 +96,6 @@ Double the space if the server is an ISS Master.
 |
 | [path]``/var/cache`` (Squid)
 | Minimum 100{nbsp}GB
-
 |===
 
 
@@ -108,6 +105,8 @@ If there is not enough space available in [path]``/var/cache/``, the proxy will 
 As a result of this behavior:
 
 * The larger [path]``/var/cache/`` directory is on the proxy, the less traffic there will be between it and the {productname} Server.
+
 * By making the [path]``/var/cache/`` directory on the proxy the same size as [path]``/var/spacewalk/`` on the {productname} Server, you avoid a large amount of traffic after the first synchronization.
+
 * The [path]``/var/cache/`` directory can be small on the {productname} Server compared to the proxy.
     For a guide to size estimation, see the <<server-hardware-requirements>> section.
