--- a/modules/installation-and-upgrade/pages/uyuni-proxy-registration.adoc
+++ b/modules/installation-and-upgrade/pages/uyuni-proxy-registration.adoc
@@ -14,7 +14,6 @@ Before you can select the correct child channels while creating the activation k
 
 [[proxy-register-procedure]]
 .Procedure: Registering the Proxy
-
 . On the {productname} Server, create openSUSE Leap and the {productname} Proxy channels with the [command]``spacewalk-common-channels`` command.
     [command]``spacewalk-common-channels`` is part of the [package]``spacewalk-utils`` package:
 +
@@ -29,30 +28,27 @@ opensuse_leap15_4-sle-updates \
 uyuni-proxy-stable-leap-154
 ----
 +
+
 Instead of [systemitem]``uyuni-proxy-stable-leap-154`` you can also try [systemitem]``uyuni-proxy-devel-leap`` that is the current development version.
 +
+
 For more information, see xref:client-configuration:clients-opensuseleap.adoc[].
 +
-////
-// Atfer a successful sync run, bootstrap repos are now created automatically.
-// Since 2020.07 or earlier
-. Create the openSUSE Leap Uyuni Client Tools Repository for bootstrapping.
-For more information about bootstrapping, see xref:client-configuration:bootstrap-repository.adoc[].
-////
-. Create an activation key with openSUSE Leap as a base channel and the other channels as child channels.
-    For more information about activation keys, see xref:client-configuration:activation-keys.adoc[].
+
+. Create an activation key with openSUSE Leap as a base channel and the other channels as child channels. For more information about activation keys, see xref:client-configuration:activation-keys.adoc[].
+
 . Modify a bootstrap script for the proxy.
     Add the GPG key to the [systemitem]``ORG_GPG_KEY=`` parameter.
     For more information, see xref:client-configuration:clients-opensuseleap.adoc[].
     For more information about bootstrap scripts, see xref:client-configuration:registration-bootstrap.adoc[].
-+
-// Traditional clients are not supported
+
 . Bootstrap the client using the script.
     For more information, see xref:client-configuration:registration-bootstrap.adoc[].
+
 . Navigate to menu:Salt[Keys] and accept the key.
     When the key is accepted, the new proxy will show in menu:Systems[Overview] in the [guimenu]``
     Recently Registered Systems`` section.
+
 . Navigate to menu:System Details[Software > Software Channels], and check that the proxy channel is selected.
 
-// Next action:
 For setting up a registered {productname} Proxy, see xref:uyuni-proxy-setup.adoc[].
