--- a/modules/installation-and-upgrade/pages/proxy-container-k3s-installation.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-k3s-installation.adoc
@@ -141,4 +141,4 @@ helm install uyuni-proxy oci://registry.suse.com/suse/manager/4.3/proxy -f confi
 endif::[]
 
 
-For more information see https://kubernetes.io/docs/concepts/storage/persistent-volumes/ (kubernetes) or https://rancher.com/docs/k3s/latest/en/storage/ (k3s) documentation.
+For more information see link:https://kubernetes.io/docs/concepts/storage/persistent-volumes/[] (kubernetes) or link:https://rancher.com/docs/k3s/latest/en/storage/[] (k3s) documentation.
