--- a/modules/installation-and-upgrade/pages/pubcloud-setup.adoc
+++ b/modules/installation-and-upgrade/pages/pubcloud-setup.adoc
@@ -29,21 +29,29 @@ To use {productname} on a public cloud instance, you need to activate the public
 
 
 .Procedure: Activating the public cloud module
+
 . On the {productname} Server, open the {yast} management tool, and navigate to menu:Software[Software Repositories].
+
 . Click btn:[Add] and select [guimenu]``Extensions and Modules from Registration Server``.
+
 . In the [guimenu]``Available extensions`` field, select [guimenu]``Public Cloud Module``.
++
 
 If you prefer to use the command line, you can add the module with this command:
++
+
 ----
 SUSEConnect -p sle-module-public-cloud/15.3/x86_64
 ----
++
 
 When the installation procedure has finished, you can check that you have all the required modules.
 At the command prompt, enter:
-
++
 ----
 SUSEConnect --status-text
 ----
++
 
 For {productname} Server on a public cloud, the expected modules are:
 
@@ -68,12 +76,23 @@ Sign in to the {productname} {webui} with the administrator account.
 The username and password varies depending on your provider.
 
 .Default Administrator Account Details
-[cols="1,1,1", options="header"]
+[cols="3*",options="header"]
 |===
-| Provider              | Default Username  | Default Password
-| Amazon EC2            | ``admin``         | ``<instance-ID>``
-| Google Compute Engine | ``admin``         | ``<instance-ID>``
-| Microsoft Azure       | ``admin``         | ``<instance-name>-suma``
+| Provider              
+| Default Username  
+| Default Password
+
+| Amazon EC2            
+| ``admin``         
+| ``<instance-ID>``
+
+| Google Compute Engine 
+| ``admin``         
+| ``<instance-ID>``
+
+| Microsoft Azure       
+| ``admin``         
+| ``<instance-name>-suma``
 |===
 
 You can retrieve the instance name or ID from the public cloud instance web console, or from the command prompt:
