--- a/modules/client-configuration/pages/clients-opensuseleapmicro.adoc
+++ b/modules/client-configuration/pages/clients-opensuseleapmicro.adoc
@@ -11,7 +11,7 @@ It leverages the enterprise hardened security and compliance components of SUSE 
 
 The {leapmicro} uses transactional updates.
 Transactional updates are atomic (all updates are applied only if all updates succeed) and support rollbacks.
-They do not affect a running system as no changes are activated until after the system is rebooted.
+They do not affect the running system because no changes are activated until the system is rebooted.
 This information is displayed in the menu:Systems[Details > Overview] subtab.
 
 For more information on transactional updates and rebooting, see
@@ -106,18 +106,18 @@ Synchronization can sometimes take several hours.
 
 [WARNING]
 ====
-${leapmicro} clients require reboot after registering.
+{leapmicro} clients require reboot after registering.
 Reboot is automatically scheduled after registration is completed, but it is respecting the default reboot manager maintenance window.
 This window may be several hours after the client is registered.
 To speed up {leapmicro} registration, manually reboot the client after the registration script finishes.
 ====
 
-To register your {leapmicro} clients, you need a bootstrap repository.
+To register {leapmicro} clients, you need a bootstrap repository.
 By default, bootstrap repositories are automatically created, and regenerated daily for all synchronized products.
-You can manually create the bootstrap repository from the command prompt, using this command:
+You can manually create the bootstrap repository from the command prompt, using the command:
 
 ----
 mgr-create-bootstrap-repo
 ----
 
-For more information on registering your clients, see xref:client-configuration:registration-overview.adoc[].
+For more information on registering clients, see xref:client-configuration:registration-overview.adoc[].
