per feedback remove "thin" here.

--- a/modules/client-configuration/pages/delete-clients.adoc
+++ b/modules/client-configuration/pages/delete-clients.adoc
@@ -68,6 +68,8 @@ usage: system_delete [options] <SYSTEMS>
 	        in case of error
 ----
 
+////
+// move to Trouble Shooting and link from here
 Sometimes a new registration of a deleted (unregistered) client might not be possible.
 To solve this issue, some Salt cache files should be deleted on the {productname} Server (Salt master) before trying to re-register again:
 
@@ -75,6 +77,7 @@ To solve this issue, some Salt cache files should be deleted on the {productname
 rm /var/cache/salt/master/thin/version
 rm /var/cache/salt/master/thin/thin.tgz
 ----
+////
 
 
 
