Cover both proxies with dhcp example

--- a/modules/retail/pages/retail-install-setup.adoc
+++ b/modules/retail/pages/retail-install-setup.adoc
@@ -148,17 +148,24 @@ For this to work [systemitem]``DHCP`` service for the network terminal is connec
   }
   else {
     if option arch = 00:07 {
-       filename "shim.efi";
+       filename "boot/shim.efi";
        next-server <IP address of branch server proxy>;
     }
     else {
-      filename "pxelinux.0";
+      filename "boot/pxelinux.0";
       next-server <IP address of branch server proxy>;
     }
   }
 ====
 
-Notice two important options, [systemitem]``next-server`` which is set to the branch server IP address and [systemitem]``filename`` set to the [systemitem]``pxelinux.0`` for BIOS based system and [systemitem]``shim.efi`` for UEFI systems with SecureBoot support.
+Notice two important options, [systemitem]``next-server`` which is set to the branch server IP address and [systemitem]``filename`` set to the [systemitem]``boot/pxelinux.0`` for BIOS based system and [systemitem]``boot/shim.efi`` for UEFI systems with SecureBoot support.
+
+[IMPORTANT]
+====
+Containerized branch proxy uses different [systemitem]``filename`` then regular branch server.
+
+For containerized branch proxy set [systemitem]``filename`` to the [systemitem]``pxelinux.0`` for BIOS based system and [systemitem]``grub/shim.efi`` for UEFI systems with SecureBoot.
+====
 
 === Saltboot service discovery
 
