--- a/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
@@ -120,6 +120,11 @@ In this file it is possible to modify the tag to use for the container images:
 
 - [literal]``TAG``=[path]``latest``
 
+[IMPORTANT]
+====
+Do not change the [literal]``TAG`` value without knowing what you are doing or having been instructed to do it.
+====
+
 === Using a custom container image for a service
 
 By default, the {productname} Proxy suite is set to use the same image version and registry path for each of its services.
