Apply suggestions from code review
Co-authored-by: Konstantinos Tsamis <ktsamis@suse.com>

--- a/modules/administration/pages/ptfs.adoc
+++ b/modules/administration/pages/ptfs.adoc
@@ -7,7 +7,8 @@ These PTFs (Program Temporary Fixes) are now available as repositories, which ca
 
 == Understanding PTF packages
 
-PTF packages are installed via a proxy package and are named `ptf-xxxxxx`.
+PTF packages are installed via a proxy package and are named `ptf-xxxxxx`, where xxxxxx is a number and part of the name of the package, not its version.
+
 They will depend on the correct version of the package that is known to include the correction in the software. This type of package:
 
 * cannot be installed accidentally (i.e. zypper update will never suggest installing them),
@@ -65,7 +66,7 @@ into a future maintenance update before being widely distributed as an regular m
 When this regular update with the fix is released, an updated version of the PTF will also be released into
 the account-specific PTF repository. The updated PTF will remove the strict dependencies and allow updates to be installed again.
 
-The replacement of the PTF with the maintenance update which include the fix happens automatically via
+The replacement of the PTF with the maintenance update which includes the fix happens automatically via
 a standard package update or patch installation.
 
 
@@ -93,7 +94,7 @@ In case the PTF should be removed using the API, the normal [systemitem]``system
 == Removing the patched version of a package on the client
 
 In case a PTF should be removed directly on the client using the console, it is required to use a special command ``zypper removeptf ...``.
-  All other ways result either in an error or can lead to unwanted behavior like removing important packages from the system and make the system unusable.
+All other ways result either in an error or can lead to unwanted behavior like removing important packages from the system and make the system unusable.
 
 For the command line usage see also: https://www.suse.com/de-de/support/kb/doc/?id=000020596
 
