--- a/modules/retail/pages/containerized-saltboot.adoc
+++ b/modules/retail/pages/containerized-saltboot.adoc
@@ -5,7 +5,7 @@ To set up the {productname} {smr} environment, you will need to have already ins
 
 * {productname} {smr} Server 4.3 or newer
 * one or more {productname} {smr} containerized proxies
-* one or more {productname} build host
+* one or more {productname} build hosts
 
 This section covers how to configure your  environment using containerized {productname} Proxy for [systemitem]``Saltboot`` deployment.
 
@@ -64,7 +64,7 @@ image::saltboot_group.png[scaledwidth=80%]
 
 Name of the [systemitem]``Saltboot group`` is automatically used as a [systemitem]``branch id``, an identifier for group of machines booted through particular containerized {productname} Proxy.
 
-All [systemitem]``saltboot`` deployed machines though containerized proxy will automatically became members of its [systemitem]``Saltboot group``.
+All [systemitem]``saltboot`` deployed machines though containerized proxy will automatically become members of its [systemitem]``Saltboot group``.
 
 To connect [systemitem]``Saltboot group`` with containerized proxy fill [systemitem]``Image Download Server`` entry with Fully Qualified Domain Name ([literal]``FQDN``) of the containerized proxy.
 
