Explain adding optional channels via the web UI
Signed-off-by: Pascal Arlt <parlt@suse.com>

--- a/modules/administration/pages/ptfs.adoc
+++ b/modules/administration/pages/ptfs.adoc
@@ -42,6 +42,16 @@ PTF packages need to be installed explicitly, since they are not automatically p
 The SUSE Customer Support will provide the PTF number to fix a specific problem. With the number the proxy package can be identified in the PTF list.
 In {productname} {webui} every system with PTFs available for installation has a page which lists them.
 
+.Procedure: Enable and Synchronize PTF repositories via the {productname} {webui}
+
+. In the {productname} {webui}, navigate to menu:Admin[Setup Wizard > Products] and look for the product you want to enable the PTF repository for.
+. Click btn:[Show product's channels] next to the products sync status.
+. You should see a popup listing mandatory and optional channels for the product.
+. In the optional channels list look for channels starting with your SCC account name and `ptfs` in its name.
+  E.g. `a123456-sles-15.3-ptfs-x86_64`.
+. Select the channel using the checkbox next to its name and click btn:[Confirm] to schedule the sync.
+
+Note that the product has to be installed to be able to add optional channels to it.
 
 .Procedure: Installation of PTF packages
 
